; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_ai_move.c_BotMoveInDirection.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_ai_move.c_BotMoveInDirection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BotMoveInDirection(i32 %0, i32 %1, float %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca float, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store float %2, float* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.TYPE_5__* @BotMoveStateFromHandle(i32 %11)
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %10, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %14 = icmp ne %struct.TYPE_5__* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* @qfalse, align 4
  store i32 %16, i32* %5, align 4
  br label %35

17:                                               ; preds = %4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @AAS_Swimming(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %17
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load float, float* %8, align 4
  %27 = load i32, i32* %9, align 4
  %28 = call i32 @BotSwimInDirection(%struct.TYPE_5__* %24, i32 %25, float %26, i32 %27)
  store i32 %28, i32* %5, align 4
  br label %35

29:                                               ; preds = %17
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load float, float* %8, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @BotWalkInDirection(%struct.TYPE_5__* %30, i32 %31, float %32, i32 %33)
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %29, %23, %15
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local %struct.TYPE_5__* @BotMoveStateFromHandle(i32) #1

declare dso_local i64 @AAS_Swimming(i32) #1

declare dso_local i32 @BotSwimInDirection(%struct.TYPE_5__*, i32, float, i32) #1

declare dso_local i32 @BotWalkInDirection(%struct.TYPE_5__*, i32, float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
